	immediatly after a slime-compile-and-load-file.
	(slime-compilation-just-finished): New variable.
	(slime-compilation-finished): Update slime-compilation-finished.
	(slime-next-note, slime-previous-note): Respect
	slime-compilation-just-finished.
	(slime-autodoc-use-multiline-p): Specify the type.
	(slime-repl-grab-old-input): Typo in docstring.
	
2006-09-20  Marco Baringer  <mb@bese.it>

	* slime.el (slime-cheat-sheet): New function.
	(slime-cheat-sheet-table): New variable which specifies what the
	cheat sheet should list.
	(slime-read-package-name): Set require to T in the call to
	completing read, it doesn't make any sense to switch to an
	inexistent package.
	
	* doc/slime.texi: Added "Tips and Tricks" chapter (need a better
	name for this).

	* swank-sbcl.lisp (fallback-source-location): Use abort-request
	instead of error.
	(locate-compiler-note): Say, in the error message, what data
	caused the error.

2006-09-20  Juho Snellman  <jsnell@iki.fi>	
	
	* swank-sbcl.lisp (call-with-debugger-hook): use INVOKE-STEPPER
	instead of calling the stepper hook manually
	
2006-09-19  Juho Snellman  <jsnell@iki.fi>	
	
	* swank-sbcl.lisp (call-with-debugger-hook): make the stepper
	also work with a threaded SBCL, by binding a handler for
	sb-ext:stepper-condition instead of relying on the one that SBCL
	establishes on the toplevel
	
2006-09-19  Juho Snellman  <jsnell@iki.fi>

	Extend the stepper protocol to work nicely with the SBCL stepper.

	If sldb is invoked on a condition that's sldb-stepper-condition-p,
	the sldb functions sldb-step, sldb-next and sldb-out will invoke
	the matching backend functions for stepping into the stepped form,
	to the next form, or out of the current function. Otherwise the
	functions will behave like sldb-step used to (call active-stepping and
	select the continue restart).

	* swank-backend.lisp (sldb-stepper-condition-p, sldb-step-into, 
	sldb-step-next, sldb-step-out): New interface functions
	